# summaly-rs

./: Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: docker-publish.yml
examples/: healthcheck.rs
src/: main.rs
