[package]
name = "summaly-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = "*"
axum = { version = "0.7" }
tower-http = { version = "*", features = ["compression-gzip"] }
tokio = { version = "1.0", features = ["rt-multi-thread","signal"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "^0.3.8"
serde = {version="^1.0.164",features=["derive"]}
serde_json ="1"
reqwest = { version = "0.12", default-features = false , features = ["stream","rustls-tls-webpki-roots"] }
html_parser = "0.7"
html-escape = "0.2"
urlencoding = "2.1.3"
encoding_rs = "0.8"
chrono = "0.4"

[profile.release]
strip = true
opt-level = 3
lto = "thin"
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
